# ProjectEuler

euler-1/: main.cpp
euler-2/: main.cpp
euler-3/: main.cpp
euler-4/: main.cpp
euler-5/: main.cpp
euler-6/: main.cpp
euler-7/: main.cpp
euler-8/: main.cpp  run.ps1
euler-9/: main.cpp
euler-base/: CMakeLists.txt  main.cpp
include/: benchmark.hpp  math.hpp  types.hpp
